# gixy

./: pyproject.toml  setup.py
.github/workflows/: CI.yml
gixy/: __init__.py
gixy/cli/: argparser.py  main.py
gixy/core/: builtin_variables.py  config.py  context.py  issue.py  manager.py  plugins_manager.py  regexp.py  severity.py  utils.py  variable.py
gixy/core/sre_parse/: sre_constants.py  sre_parse.py
gixy/directives/: __init__.py  block.py  directive.py
gixy/formatters/: __init__.py  _jinja.py  base.py  console.py  json.py  text.py
gixy/parser/: nginx_parser.py  raw_parser.py
gixy/plugins/: add_header_multiline.py  add_header_redefinition.py  alias_traversal.py  host_spoofing.py  http_splitting.py  origins.py  plugin.py  ssrf.py  valid_referers.py
gixy/utils/: text.py
tests/: asserts.py  utils.py
tests/core/: test_context.py  test_regexp.py  test_variable.py
tests/directives/: test_block.py  test_directive.py
tests/parser/: test_nginx_parser.py  test_raw_parser.py
tests/plugins/: test_simply.py
