[tool.poetry]
name = "gixy2"
version = "0.1.0"
description = "gixy2"
authors = ["Your Name <you@example.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pyparsing = "^1.5.5"
six = "^1.1.0"

[tool.poetry.dev-dependencies]
tox = "^2.7.0"
coverage = "^4.3"
flake8 = "^3.2"
nose = "^1.3.7"
mock = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
